--- a/receitas/templates/receitas/homepage.html
+++ b/receitas/templates/receitas/homepage.html
@@ -1,29 +1,22 @@
 {%extends 'base.html'%}
 {%block body %}
-    <header>
-        <div class="">logo</div>
-
-        <nav class="nav-bar">
-            <ul class="list-ul">
-                <li><a href="#">Receitas</a></li>
-                <li><a href="#">Perfil</a></li>
-                <li><a href="#">Categorias</a></li>
-                <li><a href="#">Publicar</a></li>
-            </ul>
-        </nav>
-    </header>
-
+{% include 'parcias/_header.html' %}
     <main>
         <div class="container-post-flex">
             {% for receita in receitas%}
+            {% if receita.post_publicado %}
             <div class="post">
-                <img src="{{ receita.post_foto.url }}" alt="" class="img-receita">
+                <a href="{% url 'receitas:detalhe' receita.post_codigo %}">
+                    <img src="" alt="" class="img-receita">
+
                 <div class="post-text">
                     <h1>{{receita.post_nome}}</h1>
 
                     <h2> Feito por: {{receita.post_usuario_fk}}</h2>
                 </div>
+                </a>
             </div>
+            {% endif %}
             {%endfor%}
 
         </div>
