--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -114,7 +114,7 @@ header{
 }
 .post{
     width: 29%;
-    height: 4vh;
+    height: 40vh;
     background: linear-gradient(to top, #c7c7c76b,#ededed00 );
     border-radius: 5px;
     margin: 1%;
@@ -129,4 +129,102 @@ header{
     padding: 2px;
     text-align:center;
     font-size: 8.5pt;
+}
+.post a{
+    background-color: transparent;
+    color: black;
+    text-decoration: none;
+}
+/* DETALHE */
+.container-receita-detalhe{
+    margin: 1%;
+}
+.img-receita-detalhe{
+    background-color: #000000;
+    width: 50%;
+    margin: 0 auto;
+    height: 60vh;
+    display:block;
+}
+.autor-receita{
+    margin-top: 15px;
+    text-align: center  ;
+    font-size: 20pt;
+    font-weight:700;
+
+}
+.receita-detalhe-tituto{
+    text-align: center;
+    margin: 20px 0;
+}
+.linha{
+    width:25%;
+    margin:15px 0;
+    background: #ccc;
+    border: none;
+    border-radius:none;
+    height:2px
+}
+.flex-linha{
+    display:flex;
+    justify-content:space-between;
+}
+.receita-ingredientes{
+    margin:15px 0;
+}
+/* PUBLICAR */
+.conteiner-publicar{
+    margin: 1%;
+}
+.nome-receita{
+    margin: 15px 0;
+    text-align: center;
+    font-size: 15pt;
+    font-weight: 700;
+}
+#id_post_nome{
+    border: none;
+    font-size: 15pt;
+    border-bottom: 1px solid black  ;
+    outline: none;
+    width: 50%;
+}
+#id_post_foto{
+    display: block;
+    margin: 0 auto;
+}
+.block{
+    font-size: 15pt;
+    margin: 25px 0;
+}
+#id_post_preparo,#id_post_ingredientes{
+    display: block;
+    width: 80%;
+    font-size: 15pt;
+    margin-top: 15px;
+    resize:none;
+    padding: 5px;
+}
+.label-postar{
+    font-size: 15pt;
+    display: block;
+    margin-top: 35px;
+    font-weight: 700;
+}
+.btn-enviar{
+    margin: 20px auto;
+    text-align: center;
+    width: 15%;
+    padding: 1%;
+    border-radius: 15px;
+    font-size: 1rem;
+    color: rgb(236, 226, 226);
+    border: none;
+    background-color: #c90404;
+    box-shadow: 2px 3px 6px 0rem #000000;
+    display: block;
+}
+.btn-enviar:hover{
+        background-color: #ad0000;
+        color: rgb(206, 202, 202);
 }
