--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -95,7 +95,7 @@ header{
 }
 .nav-bar .list-ul{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .nav-bar ul{
     list-style-type: none;
@@ -189,6 +189,22 @@ header{
     outline: none;
     width: 50%;
 }
+.label-tempo-publicar{
+    font-size: 15pt;
+    font-weight: 700;
+}
+#id_post_tempo{
+    border: none;
+    font-size: 15pt;
+    border-bottom: 1px solid black;
+    outline: none;
+    width: 4%;
+}
+.p-minutos{
+    font-size: 14pt;
+    font-weight: 600;
+    display:inline;
+}
 #id_post_foto{
     display: block;
     margin: 0 auto;
@@ -227,4 +243,15 @@ header{
 .btn-enviar:hover{
         background-color: #ad0000;
         color: rgb(206, 202, 202);
+}
+.alert-success{
+    width: 50%;
+    margin: 12px auto;
+    display: block;
+    text-align: center;
+    background: #04d104a6;
+    /* margin: 12px; */
+    padding: 1%;
+    font-size: 14pt;
+    color: black;
 }
