--- a/templates/parcias/_header.html
+++ b/templates/parcias/_header.html
@@ -1,6 +1,7 @@
 {% load static %}
 <header>
-        <div class="">logo</div>
+    <img class="img-logo" src="{% static 'Imagens/logotipo.png'%}" alt="">
+
 
         <nav class="nav-bar">
             <ul class="list-ul">
