--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -80,15 +80,30 @@
     color: #c90404;
     
 }
+.container-logo{
+    width: 100%;
+    height: 10vh;
+}
+.img-logo{
+    width:12%;
+}
+.logo-tipo{
+    background-image: url(Imagens/logotipo.png);
+    width: 13%;
+    height: 10vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 /* HOMEPAGE */ 
 header{
     display: flex;
     width: 100%;
     height: 13vh;
-    background-color: #202426;
+    background-color: #F2F2F2;
     justify-content: space-between;
     align-items: center;
     padding: 0 2%;
+    box-shadow: 0px 2px 10px 0px black;
 }
 .nav-bar {
     width: 35%;
@@ -102,7 +117,7 @@ header{
 }
 .nav-bar ul li a{
     text-decoration: none;
-    color: white;
+    color: #f11d25;;
     font-size: 1.15rem;
     font-weight: 700;
 }
