--- a/perfil/templates/perfil/cadastro.html
+++ b/perfil/templates/perfil/cadastro.html
@@ -3,7 +3,7 @@
     <div class="container-flex-center">
         <div class="container-login">
 
-            <form action="" method="POST" class="form-login">
+            <form action="" method="POST" class="form-login cadastro-usuario">
                 {% csrf_token %}
 
                 <h1 class="texto-login">Cadastro</h1>
@@ -31,6 +31,7 @@
                     <button type="submit" class="btn-login">Cadastre-se</button>
                 </div>
             </form>
+            <div class="img-background img-cadastro"></div>
         </div>
     </div>
 {%endblock%}
