--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -26,6 +26,7 @@
                 <p class="text-link-cadastro">Não tem uma conta ainda? <a href="{% url 'perfil:cadastro' %}">Clique aqui</a> para criar!</p>
             </div>
         </div>
+        <div class="img-background"></div>
     </div>
 </body>
 </html>
