--- a/receitas/templates/receitas/publicar.html
+++ b/receitas/templates/receitas/publicar.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {%block body %}
 {% include 'parcias/_header.html' %}
-<form method="POST" class="form-login" enctype="multipart/form-data" >
+<form method="POST" class="margin-publicar" enctype="multipart/form-data" >
 {% csrf_token %}
 
 
