--- a/receitas/templates/receitas/homepage.html
+++ b/receitas/templates/receitas/homepage.html
@@ -1,13 +1,18 @@
 {%extends 'base.html'%}
 {%block body %}
 {% include 'parcias/_header.html' %}
-    <main>
+    <div class="homepage-background"></div>
+    <main >
         {% for message in messages %}
             <div class="alert {{ message.tags }}" role="alert">
             {{ message }}
             </div>
         {%endfor%}
-
+         <div class="flex-linha">
+                <hr class="linha">
+                    <h1> Receitas postadas</h1>
+                <hr class="linha">
+            </div>
         <div class="container-post-flex">
 
             {% for receita in receitas%}
