--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -16,13 +16,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #d0d0d1;
+    background: linear-gradient(90deg, #403A3E, #8f0000e8);
 }
 .form-login{
     margin: 3%;
+    width: 100%;
+}
+.style-container{
+    width: 52%;
+    display: flex;
+    align-content: space-between;
+    flex-wrap: wrap;
 }
 .container-login{
-    width: 34%;
+    width: 70%;
+    display: flex;
+    height: 64vh;
     background-color: #ededed;  
     border-radius: 10px;
     box-shadow: 5px 5px 1rem 0rem #000000
@@ -48,7 +57,7 @@
     margin-top: 20px;
 }
 .btn-login{
-    margin: 20px auto;
+    margin: 37px auto;
     text-align: center;
     width: 50%;
     padding: 3%;
@@ -94,6 +103,12 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.img-cadastro{
+  width:100%!important;
+}
+.cadastro-usuario{
+    width: 90%!important;
+}
 /* HOMEPAGE */ 
 header{
     display: flex;
@@ -102,24 +117,28 @@ header{
     background-color: #F2F2F2;
     justify-content: space-between;
     align-items: center;
+    margin-top: -104px;
     padding: 0 2%;
+    position: fixed;
+    z-index: 9;
     box-shadow: 0px 2px 10px 0px black;
 }
 .nav-bar {
-    width: 35%;
+    width: 100%;
 }
 .nav-bar .list-ul{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .nav-bar ul{
     list-style-type: none;
 }
 .nav-bar ul li a{
     text-decoration: none;
-    color: #f11d25;;
-    font-size: 1.15rem;
-    font-weight: 700;
+    color: #f11d25;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 .container-post-flex{
     display: flex;
@@ -182,6 +201,7 @@ header{
 }
 .flex-linha{
     display:flex;
+    margin: 50px 0;
     justify-content:space-between;
 }
 .receita-ingredientes{
@@ -190,6 +210,8 @@ header{
 /* PUBLICAR */
 .conteiner-publicar{
     margin: 1%;
+    padding-top: 30px;
+    margin-top:104px;
 }
 .nome-receita{
     margin: 15px 0;
@@ -269,4 +291,39 @@ header{
     padding: 1%;
     font-size: 14pt;
     color: black;
+}
+.receita-ingrediente{
+border: none;
+    border: none;
+    color: black;
+    font-size: 11.5pt;
+    resize: none;
+    height: 50vh;
+    text-align: initial;
+    width: 100%;
+    /* appearance: none; */
+    overflow: hidden;
+}
+.img-background{
+     background-image: url(Imagens/macarrao-penne-em-molho-de-tomate-com-frango-e-tomate-em-uma-mesa-de-madeira.jpg);
+    width: 48%;
+    height: 64vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.homepage-background{
+background-image: url(Imagens/ovos-fritos-com-legumes.jpg);
+    width: 100%;
+    height: 64vh;
+    background-size: cover;
+    margin-top: 104px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.main-pagina{
+    margin-top:104px;
+}
+.margin-publicar{
+    margin-top:15px;
 }
