--- a/receitas/templates/receitas/detalhe.html
+++ b/receitas/templates/receitas/detalhe.html
@@ -14,9 +14,10 @@
 
 
             <h1>Ingredientes</h1>
-            <p class="receita-ingredientes">{{receita.post_ingredientes}}</p>
+            <textarea class="receita-ingrediente" disabled rows="25">{{receita.post_ingredientes}}</textarea>
             <h1>Modo de preparo</h1>
-            <p>{{receita.post_preparo}}</p>
+             <textarea class="receita-ingrediente" disabled rows="25">{{receita.post_preparo}}</textarea>
+
         </div>
     </main>
 {%endblock%}
