--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -106,20 +106,21 @@ header{
     box-shadow: 0px 2px 10px 0px black;
 }
 .nav-bar {
-    width: 35%;
+    width: 100%;
 }
 .nav-bar .list-ul{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .nav-bar ul{
     list-style-type: none;
 }
 .nav-bar ul li a{
     text-decoration: none;
-    color: #f11d25;;
-    font-size: 1.15rem;
-    font-weight: 700;
+    color: #f11d25;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 .container-post-flex{
     display: flex;
@@ -269,4 +270,16 @@ header{
     padding: 1%;
     font-size: 14pt;
     color: black;
+}
+.receita-ingrediente{
+border: none;
+    border: none;
+    color: black;
+    font-size: 11.5pt;
+    resize: none;
+    height: 50vh;
+    text-align: initial;
+    width: 100%;
+    /* appearance: none; */
+    overflow: hidden;
 }
