--- a/perfil/templates/perfil/cadastro.html
+++ b/perfil/templates/perfil/cadastro.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body%}
     <div class="container-flex-center">
-        <div class="container-login">
+        <div class="container-login container-cadastro-usuario">
 
             <form action="" method="POST" class="form-login cadastro-usuario">
                 {% csrf_token %}
