--- a/receitas/templates/receitas/publicar.html
+++ b/receitas/templates/receitas/publicar.html
@@ -11,7 +11,7 @@
                 {{formulario.post_nome}}
                 {{formulario.errors.post_nome}}
             </div>
-
+            <label for="id_post_foto" class="label-foto">Enviar arquivo</label>
             {{formulario.post_foto}}
              {% for message in messages %}
         <div class="alert {{ message.tags }}" role="alert">
