--- a/receitas/templates/receitas/homepage.html
+++ b/receitas/templates/receitas/homepage.html
@@ -1,7 +1,14 @@
 {%extends 'base.html'%}
 {%block body %}
 {% include 'parcias/_header.html' %}
-    <div class="homepage-background"></div>
+    <div class="homepage-background">
+        <form action="{% url 'receitas:buscar' %}" class="pesquisa" method="GET" >
+            <input type="text" class="pesquisa-input" name="nome" value="{{ request.GET.nome }}">
+            <button type="submit" class="btn-pesquisa">
+              
+            </button>
+        </form>
+    </div>
     <main >
         {% for message in messages %}
             <div class="alert {{ message.tags }}" role="alert">
