--- a/templates/parcias/_header.html
+++ b/templates/parcias/_header.html
@@ -5,13 +5,14 @@
 
         <nav class="nav-bar">
             <ul class="list-ul">
+                 <img class="img-logo" src="{% static 'Imagens/logotipo.png'%}" alt="">
                 <li><a href="{% url 'receitas:homepage' %}">Home</a></li>
 
 
-                <img class="img-logo" src="{% static 'Imagens/logotipo.png'%}" alt="">
+ <li><a href="{% url 'perfil:publicar' %}">Publicar</a></li>
 
+                <li><a href="{% url 'perfil:logout' %}">Sair</a></li>
 
-                <li><a href="{% url 'perfil:publicar' %}">Publicar</a></li>
             </ul>
         </nav>
 </header>
