--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -2,11 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'FiraSans', sans-serif;
 }
 @font-face {
-    font-family: 'Fonte-Oswald';
-    src: url('fontes/Oswald-ExtraLight.ttf') format
+    font-family: Fonte-Oswald;
+    src: url(fontes/Oswald-ExtraLight.ttf) format
     ('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'FiraSans';
+    src: url('fontes/FiraSans-SemiBoldItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -112,7 +120,7 @@
     /*height: 72vh!important;*/
 }
 .container-cadastro-usuario{
-    height: 72vh!important;
+    height: 84vh!important;
 }
 /* HOMEPAGE */ 
 header{
@@ -153,11 +161,15 @@ header{
 }
 .post{
     width: 29%;
-    height: 40vh;
+    height: 43vh;
     background: linear-gradient(to top, #c7c7c76b,#ededed00 );
     border-radius: 5px;
     margin: 1%;
-    box-shadow: 0 5px 5px 0 rgba(0,0,0,.15);
+    box-shadow: 4px 6px 7px 0px rgb(0 0 0 / 29%);
+}
+.post:hover{
+    scale: 1.01;
+    box-shadow: 7px 8px 8px 0px rgb(0 0 0 / 35%);
 }
 .img-receita{
     width: 100%;
@@ -240,7 +252,7 @@ header{
     font-size: 15pt;
     border-bottom: 1px solid black;
     outline: none;
-    width: 4%;
+    width: 14%;
 }
 .p-minutos{
     font-size: 14pt;
@@ -253,13 +265,14 @@ header{
 }
 .block{
     font-size: 15pt;
+    text-align:center;
     margin: 25px 0;
 }
 #id_post_preparo,#id_post_ingredientes{
     display: block;
     width: 80%;
     font-size: 15pt;
-    margin-top: 15px;
+    margin: 15px auto 0 auto;
     resize:none;
     padding: 5px;
 }
@@ -297,13 +310,17 @@ header{
     font-size: 14pt;
     color: black;
 }
+.informacoes{
+width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;}
 .receita-ingrediente{
 border: none;
     border: none;
     color: black;
     font-size: 11.5pt;
     resize: none;
-    height: 50vh;
     text-align: initial;
     width: 100%;
     /* appearance: none; */
@@ -345,6 +362,12 @@ background-image: url(Imagens/ovos-fritos-com-legumes.jpg);
     border: 1px solid black;
     height: 7vh;
 }
+.pesquisa:focus{
+    background-color:#fff;
+}
+.pesquisa-input, .btn-pesquisa{
+background-color:#ffffffcc;
+}
 .btn-pesquisa{
     width: 12%;
     border: 1px solid black;
@@ -355,15 +378,12 @@ background-image: url(Imagens/ovos-fritos-com-legumes.jpg);
     justify-content: center;
 }
 .icon-pesquisa{
-width: 67%;
-    height: 5.9vh;
+    width: 58%;
+    height: 4.9vh;
     border: none;
-    background-image: url(Imagens/lupa.png);
-    background-size: contain;
-    background-repeat: no-repeat;
 }
-.main-pagina{
-    margin-top:104px;
+.main-pagina {
+    margin-top: 13.45vh;
 }
 .margin-publicar{
    margin-top: -2.4vh;
@@ -387,4 +407,23 @@ background-color: white!important;
 
     background-size: contain;
     background-image: url(Imagens/envio.png);
+}
+.nada{
+    font-size: 14pt;
+    margin:2rem 0 ;
+}
+footer{
+    width: 100%;
+    height: 23vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F2F2F2;
+}
+.d-flex{
+    width: 100%;
+    display:flex;
+    margin: 6vh 0;
+    justify-content: space-around;
 }
